Simplified the context/configuration. Fixed module-info.java all tests are green now.